# monocular-vo

./: CMakeLists.txt
config/: default.yaml  kitti.yaml
data/: kitti
include/myslam/: algorithm.h  backend.h  camera.h  common_include.h  config.h  dataset.h  feature.h  frame.h  frontend.h  g2o_types.h  map.h  mappoint.h  utils.h  visual_odometry.h
result/: cam_traj_04.txt
src/: CMakeLists.txt  algorithm.cpp  backend.cpp  camera.cpp  config.cpp  dataset.cpp  feature.cpp  frame.cpp  frontend.cpp  map.cpp  mappoint.cpp  utils.cpp  visual_odometry.cpp
test/: CMakeLists.txt  test_dataset.cpp  test_vo_init.cpp
